deleted and modified some files

--- a/htmlfiles/about.html
+++ b/htmlfiles/about.html
@@ -15,7 +15,7 @@
     />
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <title>FAQ Page Demo</title>
+    <title>About Page Demo</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -25,7 +25,7 @@
       <nav class="navbar navbar-expand-sm navbar-light nav-custom pl-3 pr-3">
         <div class="container">
           <h1>
-            <a href="index.html" class="navbar-brand">
+            <a href="https://desh-mainhome.netlify.app/" class="navbar-brand">
               <img src="images/short-logo.png" alt style="width: 200px" />
             </a>
           </h1>
@@ -42,27 +42,17 @@
             style="text-align: center"
           >
             <ul class="navbar-nav custom-nav-item tex-center">
-                <li><a class="active" href="index.html">Home</a></li>
+              <li><a class="active" href="index.html">Home</a></li>
 
-                <li>
-                  <a class="" href="privacy.html">Privacy Policy</a>
-                </li>
-  
-                <li>
-                  <a class="" href="terms.html">Terms & Condition</a>
-                </li>
-  
-                <li>
-                  <a class="" href="about.html">About Us</a>
-                </li>
-  
-                <li>
-                  <a class="" href="contact.html">Contact Us</a>
-                </li>
-  
-                <li>
-                  <a class="" href="advertise.html">Advertise</a>
-                </li>
+              <li><a class="" href="privacy.html">Privacy Policy</a></li>
+
+              <li><a class="" href="terms.html">Terms & Condition</a></li>
+
+              <li><a class="" href="about.html">About Us</a></li>
+
+              <li><a class="" href="contactus.html">Contact Us</a></li>
+
+              <li><a class="" href="advertisement.html">Advertise</a></li>
             </ul>
             <div class="">
               <a href="index.html" class="btn btn-danger"
@@ -75,21 +65,27 @@
     </header>
     <main class="main">
         <section>
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8 subscribe-wrapper">
-                        <h1>FAQ's </h1>
-                        <h2>How can i subsribe Desh Career Email?</h2>
-<p>You can subscribe this newsletter from . You input you email, then follow instruction. After email confirmation, your email address is added in our database.&nbsp;</p>
-<h2>I am a subscriber of Desh Career, but I don't find your email. Why?</h2>
-<p>Please check your email. May be our email goes to Promotion tab. If you find our email in this tab, please move it to primary tab. Than you will find this email in primary tab.&nbsp;</p>
-<p>&nbsp;</p>
-                    </div>
-                    <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
-                    </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-12 col-sm-8 col-lg-8 col-xl-8 subscribe-wrapper">
+                <h1>About Us</h1>
+                <p>
+                    Desh Career is Career based newsletter in Bengali language. This
+                    newsletter has published weekly.&nbsp; This is published in every
+                    Saturday at 12.00 PM.&nbsp;
+                  </p>
+                  <p>We focus on Career trend, news, smart job etc.&nbsp;</p>
+                  <p>If you want to contact us: you can send an email to&nbsp;<a class="editor-rtfLink" href="mailto:sabrinpolinece18@gmail.com" target="_blank" rel="noopener"><span data-preserver-spaces="true">sabrinpolinece18@gmail.com</span></a></p>
+                  <p>If you want to meet with us, you can come to our office based on an appointment.&nbsp;</p>
+                  <p>Our Office address:</p>
+                  <p>House: 13/3,</p>
+                  <p>Road: 2,</p>
+                  <p>Shyamoly, Dhaka-1207</p>
+                  <p>+8801880811047</p>
                 </div>
-            </div>
-               
+                <div class="col-sm-12 col-sm-4 col-lg-4 col-xl-4"></div>
+                </div>
+                </div>
         </section>
     </main>
                    <footer class="footer">
@@ -125,17 +121,19 @@
               </p>
             </div>
             <div class="text-align-center footer-wrapper">
-                <h4>Privacy and Terms</h4>
-                <a href="privacy.html">Privacy Policy</a>
-                <a href="terms.html">Terms Condition</a>
-                <a href="faq.html">FAQ</a>
-              </div>
-              <div class="text-align-right footer-wrapper">
-                <h4>Support</h4>
-                <a href="affiliate.html">Affiliate Link</a>
-                <a href="contact.html">Contact us</a>
-                <a href="advertise.html">Advertise with us</a>
-              </div>
+              <h4>Privacy and Terms</h4>
+              <a href="privacy.html">Privacy Policy</a>
+              <a href="terms.html">Terms Condition</a>
+              <a href="faq.html">FAQ</a>
+            </div>
+            <div class="text-align-right footer-wrapper">
+              <h4>Support</h4>
+              <a href="affiliate.html">Affiliate Link</a>
+              <a href="contactus.html">Contact us</a>
+              <a href="advertisement.html"
+                >Advertise with us</a
+              >
+            </div>
           </div>
         </div>
         <hr class="divider" />
