--- a/htmlfiles/contactus.html
+++ b/htmlfiles/contactus.html
@@ -15,7 +15,7 @@
     />
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <title>Advertise Page Demo</title>
+    <title> Contact Page Demo</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -57,11 +57,11 @@
                 </li>
   
                 <li>
-                  <a class="" href="contact.html">Contact Us</a>
+                  <a class="" href="contactus.html">Contact Us</a>
                 </li>
   
                 <li>
-                  <a class="" href="advertise.html">Advertise</a>
+                  <a class="" href="advertisement.html">Advertise</a>
                 </li>
             </ul>
             <div class="">
@@ -75,19 +75,24 @@
     </header>
     <main class="main">
         <section>
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8 subscribe-wrapper">
-                        <h1>Advertisement </h1>
-                        <p>Our audience age is 30-35 Year.&nbsp;</p>
-<p>We focus on Career related content.&nbsp;</p>
-<p>If you want to promote your product to our audience, you can give advertisement, Sponsored Content.&nbsp;</p>
-<p>Our contact email: <a href="mailto:sabrinpolinece18@gmail.com">sabrinpolinece18@gmail.com</a><strong> </strong>and phone number: +8801880811047&nbsp;</p>
- </div>
-                    <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4"></div>
-
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-12 col-sm-8 col-lg-8 col-xl-8 subscribe-wrapper">
+                <h1>Contact Us</h1>
+                <p>
+                    <span>If you want to contact us:you can send an email to&nbsp;</span>
+                    <a href="mailto:sabrinpolinece18@gmail.com" target="_blank">sabrinpolinece18@gmail.com</a>
+                  </p>
+                  <p>If you want to meet with us, you can come to our office based on an appointment. &nbsp;</p>
+                  <p>Our Office address:</p>
+                  <p>House: 17/2,</p>
+                  <p>Road: 6,</p>
+                  <p>Agrabad, Chattogram-1400</p>
+                  <p>+8801880811047</p>
                 </div>
-            </div>
+                <div class="col-sm-12 col-sm-4 col-lg-4 col-xl-4"></div>
+                </div>
+                </div>
         </section>
     </main>
     <footer class="footer">
@@ -119,7 +124,7 @@
               <p>
                 Desh Career is Career based newsletter in Bengali language. This
                 newsletter has published weekly.&nbsp; This is published in every
-                Sunday at 11.00 PM.&nbsp;
+                Saturday at 12.00 PM.&nbsp;
               </p>
             </div>
             <div class="text-align-center footer-wrapper">
@@ -131,8 +136,8 @@
               <div class="text-align-right footer-wrapper">
                 <h4>Support</h4>
                 <a href="affiliate.html">Affiliate Link</a>
-                <a href="contact.html">Contact us</a>
-                <a href="advertise.html">Advertise with us</a>
+                <a href="#">Contact us</a>
+                <a href="advertisement.html">Advertise with us</a>
               </div>
           </div>
         </div>
