--- a/htmlfiles/faq.html
+++ b/htmlfiles/faq.html
@@ -15,7 +15,7 @@
     />
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <title> Contact Page Demo</title>
+    <title>FAQ Page Demo</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -57,11 +57,11 @@
                 </li>
   
                 <li>
-                  <a class="" href="contact.html">Contact Us</a>
+                  <a class="" href="contactus.html">Contact Us</a>
                 </li>
   
                 <li>
-                  <a class="" href="advertise.html">Advertise</a>
+                  <a class="" href="advertisement.html">Advertise</a>
                 </li>
             </ul>
             <div class="">
@@ -75,27 +75,24 @@
     </header>
     <main class="main">
         <section>
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-12 col-sm-8 col-lg-8 col-xl-8 subscribe-wrapper">
-                <h1>Contact Us</h1>
-                <p>
-                    <span>If you want to contact us:you can send an email to&nbsp;</span>
-                    <a href="mailto:sabrinpolinece18@gmail.com" target="_blank">sabrinpolinece18@gmail.com</a>
-                  </p>
-                  <p>If you want to meet with us, you can come to our office based on an appointment. &nbsp;</p>
-                  <p>Our Office address:</p>
-                  <p>House: 17/2,</p>
-                  <p>Road: 6,</p>
-                  <p>Agrabad, Chattogram-1400</p>
-                  <p>+8801880811047</p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8 subscribe-wrapper">
+                        <h1>FAQ's </h1>
+                        <h2>How can i subsribe Desh Career Email?</h2>
+<p>You can subscribe this newsletter from . You input you email, then follow instruction. After email confirmation, your email address is added in our database.&nbsp;</p>
+<h2>I am a subscriber of Desh Career, but I don't find your email. Why?</h2>
+<p>Please check your email. May be our email goes to Promotion tab. If you find our email in this tab, please move it to primary tab. Than you will find this email in primary tab.&nbsp;</p>
+<p>&nbsp;</p>
+                    </div>
+                    <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                    </div>
                 </div>
-                <div class="col-sm-12 col-sm-4 col-lg-4 col-xl-4"></div>
-                </div>
-                </div>
+            </div>
+               
         </section>
     </main>
-    <footer class="footer">
+                   <footer class="footer">
         <div class="container">
           <div class="social-media">
             <a href="https://www.facebook.com/sharmin.polin" class>
@@ -136,8 +133,8 @@
               <div class="text-align-right footer-wrapper">
                 <h4>Support</h4>
                 <a href="affiliate.html">Affiliate Link</a>
-                <a href="contact.html">Contact us</a>
-                <a href="advertise.html">Advertise with us</a>
+                <a href="contactus.html">Contact us</a>
+                <a href="advertisement.html">Advertise with us</a>
               </div>
           </div>
         </div>
