--- a/htmlfiles/index.html
+++ b/htmlfiles/index.html
@@ -15,10 +15,9 @@
     />
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <title>Affiliate Page Demo</title>
+    <title>Home Page Demo</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
     <header>
       <nav class="navbar navbar-expand-sm navbar-light nav-custom pl-3 pr-3">
@@ -41,7 +40,7 @@
             style="text-align: center"
           >
             <ul class="navbar-nav custom-nav-item tex-center">
-              <li><a class="active" href="index.html">Home</a></li>
+              <li><a class="active" href="#">Home</a></li>
 
               <li>
                 <a class="" href="privacy.html">Privacy Policy</a>
@@ -56,15 +55,15 @@
               </li>
 
               <li>
-                <a class="" href="contact.html">Contact Us</a>
+                <a class="" href="contactus.html">Contact Us</a>
               </li>
 
               <li>
-                <a class="" href="advertise.html">Advertise</a>
+                <a class="" href="advertisement.html">Advertise</a>
               </li>
             </ul>
             <div class="">
-              <a href="index.html" class="btn btn-danger">Join Now</a>
+              <a href="#" class="btn btn-danger">Join Now</a>
             </div>
           </div>
         </div>
@@ -74,17 +73,18 @@
       <section>
         <div class="container">
           <div class="row">
-            <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8 subscribe-wrapper">
-              <h1>Search Your Invitation</h1>
-              <div class="subcription">
-                <form
-                  action="https://deshcareer.com/affiliate/link"
-                  method="post"
-                >
+            <div class="col-sm-12 col-sm-8 col-lg-8 col-xl-8 subscribe-wrapper">
+              <h1>Get Smarter about your career</h1>
+              <p>
+                Get the<strong> 5-minute newsletter </strong> keeping about
+                smart career
+              </p>
+              <div class="subscription">
+                <form action="https://deshcareer.com/subscribe" method="post">
                   <input
                     type="hidden"
                     name="_token"
-                    value="lyZRLcTd1YcsigvT8VgXIstrC10GdYd5mSAxeIC9"
+                    value="OpmV2pTr1yKxJz32nRS9r03eu8blhARRtAlWa1I6"
                   />
                   <div class="input-area">
                     <span class="mail-icon"
@@ -96,15 +96,21 @@
                       placeholder="Your E-mail address"
                       required=""
                     />
-                    <button type="submit">Search</button>
+                    <button type="submit">Join Free</button>
                   </div>
                 </form>
+                <p class="mt-4" style="line-height: 2">
+                  <span
+                    >We're committed to your privacy. DashCareer uses the
+                    information you provide to contact you about our relevant
+                    content and services. You may unsubscribe from these
+                    communications at any time. For more information, check out
+                    our Privacy Policy.</span
+                  >
+                </p>
               </div>
-              <br />
-              <br />
             </div>
-
-            <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4"></div>
+            <div class="col-sm-12 col-sm-4 col-lg-4 col-xl-4"></div>
           </div>
         </div>
       </section>
@@ -131,7 +137,7 @@
         <div class="footer-container">
           <div class="footer-wrapper">
             <div class="pb-2">
-              <a href="https://deshcareer.com">
+              <a href="#">
                 <img src="images/short-logo.png" alt style="width: 200px" />
               </a>
             </div>
@@ -150,8 +156,8 @@
           <div class="text-align-right footer-wrapper">
             <h4>Support</h4>
             <a href="affiliate.html">Affiliate Link</a>
-            <a href="contact.html">Contact us</a>
-            <a href="advertise.html">Advertise with us</a>
+            <a href="contactus.html">Contact us</a>
+            <a href="advertisement.html">Advertise with us</a>
           </div>
         </div>
       </div>
@@ -159,7 +165,7 @@
       <div class="container">
         <div class="webright">
           <div class="webright-left">
-            &copy 2023 Newsletter E-mail Service: All Copy right reserved
+            © 2023 Newsletter E-mail Service: All Copy right reserved
           </div>
           <div class="webright-right">
             <a href>Terms</a>
