--- a/htmlfiles/privacy.html
+++ b/htmlfiles/privacy.html
@@ -50,9 +50,9 @@
 
               <li><a class="" href="about.html">About Us</a></li>
 
-              <li><a class="" href="contact.html">Contact Us</a></li>
+              <li><a class="" href="contactus.html">Contact Us</a></li>
 
-              <li><a class="" href="advertise.html">Advertise</a></li>
+              <li><a class="" href="advertisement.html">Advertise</a></li>
             </ul>
             <div class="">
               <a href="index.html" class="btn btn-danger"
@@ -198,8 +198,8 @@
             <div class="text-align-right footer-wrapper">
               <h4>Support</h4>
               <a href="affiliate.html">Affiliate Link</a>
-              <a href="contact.html">Contact us</a>
-              <a href="advertise.html">Advertise with us</a>
+              <a href="contactus.html">Contact us</a>
+              <a href="advertisement.html">Advertise with us</a>
             </div>
           </div>
         </div>
