--- a/htmlfiles/terms.html
+++ b/htmlfiles/terms.html
@@ -57,10 +57,12 @@
                 </li>
   
                 <li>
-                  <a class="" href="contact.html">Contact Us</a>
+                  <a class="" href="contactus.html">Contact Us</a>
                 </li>
   
                 <li>
+                  <a class="" href="advertisement.html">Advertise</a>
+                </li>
             </ul>
             <div class="">
               <a href="index.html" class="btn btn-danger"
@@ -141,7 +143,7 @@
                                 <li>
                                     To comply with a legal obligation</li>
                                 <li>
-                                    To protect and defend the rights or property of <a href="www.banglapuzzle.com" target="_blank" rel="noopener">Bangla Puzzle</a></li></ul></li>
+                                    To protect and defend the rights or property of <a href="https://www.banglapuzzle.com" target="_blank" rel="noopener">Bangla Puzzle</a></li></ul></li>
                                 <li>
                                     To prevent or investigate possible wrongdoing in connection with the Service</li>
                                 <li>To protect the personal safety of users of the Service or the public</li>
@@ -210,8 +212,8 @@
               <div class="text-align-right footer-wrapper">
                 <h4>Support</h4>
                 <a href="affiliate.html">Affiliate Link</a>
-                <a href="contact.html">Contact us</a>
-                <a href="advertise.html"
+                <a href="contactus.html">Contact us</a>
+                <a href="advertisement.html"
                   >Advertise with us</a
                 >
               </div>
