--- a/htmlfiles/about.html
+++ b/htmlfiles/about.html
@@ -16,7 +16,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <title>About Page Demo</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/cssfiles/style.css" />
   </head>
   <body>
     
@@ -26,7 +26,7 @@
         <div class="container">
           <h1>
             <a href="https://desh-mainhome.netlify.app/" class="navbar-brand">
-              <img src="images/short-logo.png" alt style="width: 200px" />
+              <img src="/images/short-logo.png" alt style="width: 200px" />
             </a>
           </h1>
           <button
@@ -111,7 +111,7 @@
             <div class="footer-wrapper">
               <div class="pb-2">
                 <a href="index.html">
-                  <img src="images/short-logo.png" alt style="width: 200px" />
+                  <img src="/images/short-logo.png" alt style="width: 200px" />
                 </a>
               </div>
               <p>
