--- a/htmlfiles/affiliate.html
+++ b/htmlfiles/affiliate.html
@@ -16,7 +16,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <title>Affiliate Page Demo</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/cssfiles/style.css" />
   </head>
 
   <body>
@@ -25,7 +25,7 @@
         <div class="container">
           <h1>
             <a href="index.html" class="navbar-brand">
-              <img src="images/short-logo.png" alt style="width: 200px" />
+              <img src="/images/short-logo.png" alt style="width: 200px" />
             </a>
           </h1>
           <button
@@ -132,7 +132,7 @@
           <div class="footer-wrapper">
             <div class="pb-2">
               <a href="https://deshcareer.com">
-                <img src="images/short-logo.png" alt style="width: 200px" />
+                <img src="/images/short-logo.png" alt style="width: 200px" />
               </a>
             </div>
             <p>
